@@ -2,9 +2,12 @@ package com.ksprogramming.equipment.service;
 
 import com.ksprogramming.equipment.data.UserAuthorityData;
 import com.ksprogramming.equipment.data.UserData;
+import com.ksprogramming.equipment.entities.Authority;
 import com.ksprogramming.equipment.entities.User;
 import com.ksprogramming.equipment.entities.UserAuthority;
 import com.ksprogramming.equipment.repository.UserRepository;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -40,27 +43,41 @@ public class UserService implements UserServiceInterface{
     public List<UserData> findAll(){
         return equipmentUsersEntityToData(userRepository.findDidntRemoveUser());
     }
+
     public UserData getLoggedUser(){
-//        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-//        List<EquipmentUserData> equipmentUsersData = equipmentUsersEntityToData(equipmentUserRepository.findUserByLogin(authentication.getName()));
-//        if (equipmentUsersData.size() > 0){
-//            return equipmentUsersData.get(0);
-//        }else {
-//            return null;
-//        }
-    return null;
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        List<UserData> userData = equipmentUsersEntityToData(userRepository.findUserByLogin(authentication.getName()));
+        if (!userData.isEmpty()){
+            return userData.getFirst();
+        }else {
+            return null;
+        }
     }
+
+    public UserData getUserByLogin(String login){
+        return userEntityToData(userRepository.findByLogin(login));
+
+    }
+    public Boolean isLoggedCustomerAdmin() {
+        return userAuthorityService.hasCustomerAuthority(getLoggedUser(), Authority.ADMIN);
+    }
+
+    private UserData userEntityToData(User login) {
+        return  new UserData(login.getId(), login.getLogin(), login.getPasswordHash(),
+                login.getEmailConfirmed(), login.getLanguage(), userAuthoritiesEntityToData(login.getUserAuthorities()), login.getRegistrationDate());
+
+
+    }
+
     public UserData getUserById(Long id){
-        UserData user = equipmentUserEntityToData(userRepository.getReferenceById(id.intValue()));
-        return user;
+        return equipmentUserEntityToData(userRepository.getReferenceById(id.intValue()));
+
     }
     public void changePasswordAdmin(Long id, String newPassword){
         UserData user = getUserById(id);
         changePassword(user, newPassword);
 
     }
-
-
 
     public void update(UserData userData){
         UserData user = equipmentUserEntityToData(userRepository.getReferenceById(userData.getId().intValue()));
@@ -85,6 +102,7 @@ public class UserService implements UserServiceInterface{
         userAuthorityService.delete(id);
 
     }
+
     private void changePassword(UserData user, String newPassword) {
         user.setPasswordHash(newPassword);
         userRepository.save(equipmentUserDataToEntity(user));
